--- a/src/Components/Shop/style.module.css
+++ b/src/Components/Shop/style.module.css
@@ -1,13 +1,24 @@
-.shopContainer {
-    display: flex;
+.mainStyleContainer {
+    width: 1200px;
+    margin: 0 auto;
+}
 
+.searchInput {
+    display: block;
+    flex-direction: column;
+    /*justify-content: space-between;*/
 }
 
 .product {
-    display: flex;    
-    margin: 10 px;
-    flex-wrap: wrap;
-    box-sizing: 300px;
-    
+    display: flex;
+
+}
+.searchStyle {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between ;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
