--- a/src/Components/Shop/style.module.css
+++ b/src/Components/Shop/style.module.css
@@ -14,11 +14,16 @@
 
 }
 .searchStyle {
+
     display: flex;
     flex-direction: column;
-    justify-content: space-between ;
+    justify-content: space-between;
     gap: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
+.category {
+
+    margin-top: 15px;
+}
